# TDC_SUMMIT_Brasilia

./: .audio  LICENSE  README.md  engine_ia.py  main.py  pyproject.toml  settings.py
data/: tdc.txt
endpoints/: __init__.py  groq_endpoint.py  local_endpoint.py  openai_endpoint.py
