[project]
name = "server-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "groq>=0.11.0",
    "llama-index-llms-groq>=0.2.0",
    "openai>=1.52.0",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.2",
    "uvicorn>=0.32.0",
]
